# nestchat

./: .dockerignore  .env.prod.example  .gitignore  Caddyfile  Dockerfile.caddy  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/scripts/: start-production.sh
backend/src/: asgi.py  middleware.py  settings.py  urls.py
backend/src/apps/chat/: admin.py  constants.py  serializers.py  urls.py  views.py
backend/src/apps/chat/migrations/: 0001_initial.py  0002_channelreadstate_message_idx.py  0003_message_soft_delete_fields.py  0004_message_edited_at.py  0005_messagereaction.py
backend/src/apps/chat/models/: __init__.py  channel_read_state.py  message.py  message_reaction.py
backend/src/apps/chat/services/: __init__.py  channel_permissions.py  message_permissions.py
backend/src/apps/chat/tests/: test_auth_security.py  test_channel_permissions.py  test_message_permissions.py  test_message_reactions_api.py  test_messages_api_permissions.py  test_read_state_api.py
backend/src/apps/dm/: admin.py  apps.py  constants.py  serializers.py  urls.py  views.py
backend/src/apps/dm/migrations/: 0001_initial.py
backend/src/apps/friends/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/gateway/: consumers.py  enums.py  routing.py  serializers.py
backend/src/apps/profile/: admin.py  serializers.py
backend/src/apps/server/: admin.py  enums.py  serializers.py  urls.py  views.py
backend/src/apps/user/: admin.py  models.py  serializers.py  validators.py  views.py
(+157 files in other folders)
